# dnfs

./: .gitignore  .mise.toml  .rusty-hook.toml  Cargo.toml  README.md  config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: cargo.yml
dnfs/: Cargo.toml
dnfs-lib/: Cargo.toml
dnfs-lib/src/: crypto.rs  dns.rs  error.rs  file.rs  file_record.rs  helpers.rs  lib.rs
dnfs/src/: cli.rs  clients.rs  commands.rs  config.rs  main.rs  tests.rs
src/: config.rs  file.rs  file_record.rs  helpers.rs  main.rs
