[workspace]
members = ["dnfs", "dnfs-lib"]
resolver = "2"

[workspace.dependencies]
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
cloudflare = { version = "0.11", features = ["rustls-tls"] }
color-eyre = "0.6"
futures = "0.3"
heck = "0.5"
magic-crypt = "3.1"
mime_guess = "2.0"
securefmt = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha256 = "1.5"
snap = "1.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trust-dns-resolver = { version = "0.23", features = ["dns-over-rustls"] }

# Dev Dependencies
rusty-hook = "0.11"
