[workspace]
members = ["dnfs", "dnfs-lib"]
resolver = "2"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[workspace.dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
cloudflare = { version = "0.14", features = ["rustls-tls"] }
color-eyre = "0.6"
futures = "0.3"
heck = "0.5"
hickory-resolver = { version = "0.25", features = [
  "https-ring",
  "tokio",
  "webpki-roots",
] }
mime_guess = "2.0"
rand = "0.10"
securefmt = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha256 = "1.6"
snap = "1.1"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev Dependencies
rusty-hook = "0.11"
