[package]
name = "dnfs-lib"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
base64.workspace = true
cloudflare.workspace = true
color-eyre.workspace = true
futures.workspace = true
heck.workspace = true
hickory-resolver.workspace = true
magic-crypt.workspace = true
mime_guess.workspace = true
securefmt.workspace = true
sha256.workspace = true
snap.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
rusty-hook.workspace = true
