[package]
name = "dnfs-lib"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
base64.workspace = true
cloudflare.workspace = true
color-eyre.workspace = true
futures.workspace = true
heck.workspace = true
hickory-resolver.workspace = true
mime_guess.workspace = true
rand.workspace = true
securefmt.workspace = true
sha256.workspace = true
snap.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
rusty-hook.workspace = true
