[package]
name = "dnfs"
version = "0.1.0"
edition = "2021"

[dependencies]
dnfs-lib = { path = "../dnfs-lib" }

clap.workspace = true
cloudflare.workspace = true
color-eyre.workspace = true
futures.workspace = true
magic-crypt.workspace = true
securefmt.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trust-dns-resolver.workspace = true

[dev-dependencies]
rusty-hook.workspace = true
