[package]
name = "dnfs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
dnfs-lib = { path = "../dnfs-lib" }

clap.workspace = true
cloudflare.workspace = true
color-eyre.workspace = true
futures.workspace = true
hickory-resolver.workspace = true
magic-crypt.workspace = true
securefmt.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
rusty-hook.workspace = true
